# swift-ssh

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
sidecar/: main.py  sftp.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  lib.rs  main.rs  secure_storage.rs  sftp_bridge.rs  ssh_bridge.rs
src/components/: AddGroupModal.tsx  AddHostModal.tsx  AddKeyModal.tsx  AddPortForwardingModal.tsx  AddSnippetModal.tsx  Dashboard.tsx  FileBrowserPane.tsx  HostList.tsx  KeyManager.tsx  KeysScreen.tsx  LayoutRenderer.tsx  LoadingScreen.tsx  LogsScreen.tsx  NewActionModal.tsx  NewTabModal.tsx  PortForwardingScreen.tsx  SSHErrorOverlay.tsx  SettingsScreen.tsx  SftpTab.tsx  Sidebar.tsx  SnippetsScreen.tsx  SnippetsSidebar.tsx  TerminalTab.tsx  TransferQueue.tsx  UnlockModal.tsx
src/lib/: activityLog.ts  terminalManager.ts
src/store/: useStore.ts
src/utils/: distroIcon.ts  fileIcons.ts  sftpClient.ts
