[package]
name = "swiftssh"
version = "0.1.0"
description = "A Tauri SSH Client"
authors = ["you"]
edition = "2021"

[lib]
name = "swiftssh_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
